[gd_scene load_steps=12 format=3 uid="uid://d4ks7d0ylxwf1"]

[ext_resource type="Script" uid="uid://ihmllfn3n1ge" path="res://Mirror.gd" id="1_efle6"]
[ext_resource type="Texture2D" uid="uid://bni1454whrca2" path="res://mirror_textures/base_body.png" id="2_xmy8j"]
[ext_resource type="Texture2D" uid="uid://c740nk6ffvb1t" path="res://mirror_textures/arm_selected.png" id="3_0dft4"]
[ext_resource type="Texture2D" uid="uid://ctk2e61h181o7" path="res://mirror_textures/eye.png" id="4_kff0k"]
[ext_resource type="Texture2D" uid="uid://duwe1vsp4uj84" path="res://mirror_textures/mouth.png" id="5_0oknv"]
[ext_resource type="Texture2D" uid="uid://d3qeap2gcefmm" path="res://mirror_textures/hole.png" id="6_5dkhy"]
[ext_resource type="Texture2D" uid="uid://b68yq1tbdlt6o" path="res://debug_tesxtures/chaos_noise.png" id="7_xmy8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wl2mb"]
size = Vector2(14, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0uytd"]
size = Vector2(6.5, 4.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylwjw"]
size = Vector2(17.1, 4.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1rit"]
size = Vector2(8.3, 7.2)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_efle6")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Body" type="Sprite2D" parent="."]
visibility_layer = 7
texture_filter = 1
position = Vector2(558, 346)
scale = Vector2(10, 10)
texture = ExtResource("2_xmy8j")

[node name="Arm" type="Sprite2D" parent="."]
position = Vector2(423, 326)
scale = Vector2(10, 10)
texture = ExtResource("3_0dft4")

[node name="Area2D" type="Area2D" parent="Arm"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm/Area2D"]
position = Vector2(-1.3, 0.249998)
shape = SubResource("RectangleShape2D_wl2mb")

[node name="eye" type="Sprite2D" parent="."]
position = Vector2(591, 151)
scale = Vector2(10, 10)
texture = ExtResource("4_kff0k")

[node name="Area2D" type="Area2D" parent="eye"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="eye/Area2D"]
position = Vector2(0.0499992, -0.350003)
shape = SubResource("RectangleShape2D_0uytd")

[node name="eye2" type="Sprite2D" parent="."]
position = Vector2(520, 150)
scale = Vector2(10, 10)
texture = ExtResource("4_kff0k")
flip_h = true

[node name="mouth" type="Sprite2D" parent="."]
position = Vector2(558, 196)
scale = Vector2(10, 10)
texture = ExtResource("5_0oknv")

[node name="Area2D" type="Area2D" parent="mouth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouth/Area2D"]
position = Vector2(0.150002, 0.399996)
shape = SubResource("RectangleShape2D_ylwjw")

[node name="hole" type="Sprite2D" parent="."]
position = Vector2(560, 318)
scale = Vector2(10, 10)
texture = ExtResource("6_5dkhy")

[node name="Area2D" type="Area2D" parent="hole"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hole/Area2D"]
position = Vector2(-0.0499992, 0.100002)
shape = SubResource("RectangleShape2D_n1rit")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(423, 326)
scale = Vector2(10, 10)
amount = 300
texture = ExtResource("7_xmy8j")
lifetime = 0.09
speed_scale = 0.57
explosiveness = 0.32
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(6.2, 8.62)
direction = Vector2(0, 0)
spread = 133.78
gravity = Vector2(-269.165, 0)
initial_velocity_max = 40.54
angular_velocity_min = 720.0
angular_velocity_max = 720.0
orbit_velocity_min = 1000.0
orbit_velocity_max = 1000.0
linear_accel_min = 100.0
linear_accel_max = 100.0
radial_accel_min = 100.0
radial_accel_max = 100.0
tangential_accel_min = 100.0
tangential_accel_max = 100.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 0.03
color = Color(0.485694, 0.0447198, 0.155667, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 443.0
offset_top = 9.0
offset_right = 656.0
offset_bottom = 49.0
text = "Select the Sacrifice"
horizontal_alignment = 1

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(423, 326)
scale = Vector2(10, 10)
amount = 100
texture = ExtResource("7_xmy8j")
lifetime = 0.04
speed_scale = 0.14
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(9.245, 8.575)
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 6.76
linear_accel_min = -100.0
linear_accel_max = 74.32
scale_amount_min = 0.0
scale_amount_max = 0.03
color = Color(1, 0, 0, 0.717647)

[connection signal="mouse_entered" from="Arm/Area2D" to="." method="_on_arm_mouse_entered"]
[connection signal="mouse_exited" from="Arm/Area2D" to="." method="_on_arm_mouse_exited"]
[connection signal="mouse_entered" from="eye/Area2D" to="." method="_on_eye_mouse_entered"]
[connection signal="mouse_exited" from="eye/Area2D" to="." method="_on_eye_mouse_exited"]
[connection signal="mouse_entered" from="mouth/Area2D" to="." method="_on_mouth_mouse_entered"]
[connection signal="mouse_exited" from="mouth/Area2D" to="." method="_on_mouth_mouse_exited"]
[connection signal="mouse_entered" from="hole/Area2D" to="." method="_on_hole_mouse_entered"]
[connection signal="mouse_exited" from="hole/Area2D" to="." method="_on_hole_mouse_exited"]
